test/org/midica/testfiles/failing/block-reset-shift.midica
INCLUDE inc/instruments.midica

( s=2
	0  c  /4
) s=3